censored a no-no word

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
       <div class="alert alert-danger" role="alert">
           <h4 class="alert-heading">VITAL ALERT</h4>
-          <p>uhhhh i just made this alert to fuck with harry to make it look like theres an error or something with the site</p>
+          <p>uhhhh i just made this alert to mess with harry to make it look like theres an error or something with the site</p>
           <hr>
           <p class="mb-0">yeet</p>
 </div>
