--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
     <div class="container">
       <h1 class="display-3">Hello, world!</h1>
       <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-      <div class="alert alert-danger" role="alert">
-          <h4 class="alert-heading">VITAL ALERT</h4>
-          <p>uhhhh i just made this alert to mess with harry to make it look like theres an error or something with the site</p>
+      <div class="alert alert-success" role="alert">
+          <h4 class="alert-heading">UR A LITERAL GOD</h4>
+          <p>uhhh jack ur a little bitch I hate u</p>
           <hr>
-          <p class="mb-0">yeet</p>
+          <button class="btn btn-outline-primary">yeet</button>
+
 </div>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
     </div>
