--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
 
   <main role="main">
 
-    <div class="container">
-      <h1 class="display-3">Hello, world!</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-      <div class="alert alert-success" role="alert">
-          <h4 class="alert-heading">UR A LITERAL GOD</h4>
-          <p>uhhh jack ur a little bitch I hate u</p>
-          <hr>
-          <button class="btn btn-outline-primary">yeet</button>
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-3">Hello, world!</h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading">UR A LITERAL GOD</h4>
+            <p>uhhh jack ur a little bitch I hate u</p>
+            <hr>
+            <button class="btn btn-outline-primary">yeet</button>
+        </div>
       </div>
     </div>
-    
+  
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
