--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h4 class="alert-heading">test header</h4>
             <p></p>
             <hr>
-            <button class="btn btn-outline-primary">yeet</button>
+            <button class="btn btn-outline-primary">test button</button>
         </div>
       </div>
     </div>
