--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <div class="container">
         <h1 class="display-3">Hello, world!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <div class="alert  q" role="alert">
+        <div class="alert alert-success" role="alert">
             <h4 class="alert-heading">test header</h4>
             <p></p>
             <hr>
-            <button class="btn btn-outline-primary">test button</button>
+            <button class="btn btn-outline-warning">test button</button>
         </div>
       </div>
     </div>
