--- a/index.html
+++ b/index.html
@@ -27,14 +27,8 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3">Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">test header</h4>
-            <p></p>
-            <hr>
-            <button class="btn btn-outline-warning">test button</button>
-        </div>
+        <h1 class="display-3">2020 In Review:</h1>
+        <p>The state of the world and in particular the United States has been flipped upside down with the emergence of numerous global catastrophes.</p>
       </div>
     </div>
   
@@ -42,12 +36,12 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>The COVID-19 Pandemic</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Protests Across the US</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
