--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3">2020 In Review:</h1>
-        <p>The state of the world and in particular the United States has been flipped upside down with the emergence of numerous global catastrophes.</p>
+        <h1 class="display-3">Looking Back At 2020:</h1>
+        <p>Updated as of June 5, 2020, the state of the world and in particular the United States has been flipped upside down with the emergence of numerous global catastrophes.</p>
       </div>
     </div>
   
@@ -69,12 +69,12 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>The COVID-19 Pandemic</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2>The COVID-19 Pandemic | Late 2019 - Present</h2>
+          <p>The Novel Coronavirus has swept across the globe affecting the entire human race, lives have been lost and the world shut down. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Protests Across the US</h2>
+          <h2>Protests Across the US | 26th of May - Present</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
