--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>The COVID-19 Pandemic | Late 2019 - Present</h2>
+          <h2>The COVID-19 Pandemic <br><span class="text-muted">Late 2019 - Present</span></h2>
           <p>The Novel Coronavirus has swept across the globe affecting the entire human race, lives have been lost and the world shut down. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Protests Across the US | 26th of May - Present</h2>
+          <h2>Protests Across the US <br><span class="text-muted">26th of May - Present</span></h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
