--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Protests Across the US <br><span class="text-muted">26th of May - Present</span></h2>
+          <h2>Protests Across the US <br></h2>
+          <h3 class="text-muted">26th of May - Present</h3>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
         </div>
