--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
               <div class="mask rgba-black-light flex-center">
                   <div class="container text-center white-text">
                       <div class="white-text text-center wow fadeInUp">
-                          <h2>This Navbar is fixed</h2>
-                          <h5>It will always stay visible on the top, even when you scroll down</h5>
+                          <h2>Looking Back at 2020:</h2>
+                          <h3>The state of the world and in particular the United States has been flipped upside down with the emergence of numerous global catastrophes.</h3>
                           <br>
-                          <p>Full page intro with background image will be always displayed in full screen mode, regardless of device </p>
+                          <p>Updated 06/05/2020</p>
                       </div>
                   </div>
               </div>
@@ -61,19 +61,7 @@
   
   </header>
 
-
-
-
-
 <main role="main">
-
-  <div class="jumbotron">
-    <div class="container">
-      <h1 class="display-3">Looking Back At 2020:</h1>
-      <p>Updated as of June 5, 2020, the state of the world and in particular the United States has been flipped upside down with the emergence of numerous global catastrophes.</p>
-    </div>
-  </div>
-  
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
