--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <main role="main">
     <div class="container">
       <!-- Example row of columns -->
-      <div class="row">
+      <div class="row mt-3">
 
         <div class="col-md-4 ">
           <h2 class=>The COVID-19 Pandemic</h2>
