--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header>
 
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark indigo">
-          <a class="navbar-brand" href="#"><strong>Navbar</strong></a>
+          <a class="navbar-brand" href="#"><img src="img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong>Navbar</strong></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
