LARGE update to index.html All grid elements >> cards, blue theme >> peach-gradient

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="cloudy-knoxville-gradient">
 
   <!-- Start your project here-->  
   <header>
 
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark indigo">
+      <nav class="navbar fixed-top navbar-expand-lg peach-gradient">
           <a class="navbar-brand" href="#"><img src="img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong> Navbar</strong></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -62,27 +62,65 @@
   </header>
 
 <main role="main">
+  <br>
+  <hr>
+  <br>
     <div class="container">
-      <!-- Example row of columns -->
+        <div class="row">
+            <div class="col-sm-4">
+              <div class="card">
+                <img class="card-img-top" src="https://kubrick.htvapps.com/htv-prod-media.s3.amazonaws.com/images/coronavirus-impact-crop-1584388502.jpg?crop=0.979xw:1.00xh;0.0114xw,0&resize=1200:*" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">The COVID-19 Pandemic</h5>
+                  <h6 class="card-subtitle text-muted mb-2">Late 2019 - Present</h6>
+                  <p class="card-text">The Novel Coronavirus has swept across the globe affecting the entire human race, lives have been lost and the world shut down.</p>
+                  <a href="#" class="btn btn-primary peach-gradient">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <img class="card-img-top" src="https://media12.s-nbcnews.com/j/MSNBC/Components/Video/202006/tdy_news_melvin_protests_200603_1920x1080.focal-760x428.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Protests Across the US</h5>
+                  <h6 class="card-subtitle text-muted mb-2">26th of May - Present</h6>
+                  <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                  <a href="#" class="btn btn-primary peach-gradient">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                  <img class="card-img-top" src="https://ichef.bbci.co.uk/news/1024/branded_news/D36A/production/_110422145_firemapanthony.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Other Issues this Year</h5>
+                    <h6 class="card-subtitle text-muted mb-2">Date - Date</h6>
+                    <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                    <a href="#" class="btn btn-primary peach-gradient">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+          </div>
+
       <div class="row mt-5">
 
         <div class="col-md-4 ">
           <h2 class=>The COVID-19 Pandemic</h2>
           <h5 class="text-muted text-center">Late 2019 - Present</h5>
           <p>The Novel Coronavirus has swept across the globe affecting the entire human race, lives have been lost and the world shut down. </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-primary peach-gradient" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2 class="text-center">Protests Across the US <br></h2>
           <h5 class="text-muted text-center">26th of May - Present</h5>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-primary peach-gradient" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2 class="text-center"></h2>
           <h5 class="text-muted text-center">Date - Date</h5>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-primary peach-gradient" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
   
@@ -90,9 +128,7 @@
   
     </div>
   
-  </main>
-
-
+</main>
 
 
 
