slight navbar color tweak

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Start your project here-->  
   <header>
 
-      <nav class="navbar fixed-top navbar-expand-lg peach-gradient">
+      <nav class="navbar fixed-top navbar-light navbar-expand-lg peach-gradient">
           <a class="navbar-brand" href="#"><img src="img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong> Navbar</strong></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
