updated index and covid htmls

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header>
 
         <nav class="navbar fixed-top navbar-light navbar-expand-lg peach-gradient">
-            <a class="navbar-brand" href="#"><img src="/img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong> Navbar</strong></a>
+            <a class="navbar-brand" href="#"><img src="/img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong> 2020</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Coronavirus</a>
+                        <a class="nav-link" href="/pages/covid.html">Coronavirus</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Profile</a>
@@ -102,35 +102,18 @@
               </div>
           </div>
 
-      <div class="row mt-5">
-
-        <div class="col-md-4 ">
-          <h2 class=>The COVID-19 Pandemic</h2>
-          <h5 class="text-muted text-center">Late 2019 - Present</h5>
-          <p>The Novel Coronavirus has swept across the globe affecting the entire human race, lives have been lost and the world shut down. </p>
-          <p><a class="btn btn-primary peach-gradient" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2 class="text-center">Protests Across the US <br></h2>
-          <h5 class="text-muted text-center">26th of May - Present</h5>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-primary peach-gradient" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2 class="text-center"></h2>
-          <h5 class="text-muted text-center">Date - Date</h5>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-primary peach-gradient" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-  
+      
       <hr>
   
     </div>
   
 </main>
 
-
+<footer class="footer mt-auto py-3">
+  <div class="container">
+    <span class="text-muted">Written by Jack Mahoney and Harry Lynch</span>
+  </div>
+</footer>
 
 
   <!-- End your project here-->
