--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/pages/covid.html">Coronavirus</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
-                    </li>
                 </ul>
             </div>
         </nav>
@@ -85,7 +82,7 @@
                   <h5 class="card-title">Protests Across the US</h5>
                   <h6 class="card-subtitle text-muted mb-2">26th of May - Present</h6>
                   <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                  <a href="#" class="btn btn-primary peach-gradient">Go somewhere</a>
+                  <a href="#" class="btn btn-primary peach-gradient disabled" disabled>Go somewhere</a>
                 </div>
               </div>
             </div>
@@ -96,7 +93,7 @@
                     <h5 class="card-title">Other Issues this Year</h5>
                     <h6 class="card-subtitle text-muted mb-2">Date - Date</h6>
                     <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                    <a href="#" class="btn btn-primary peach-gradient">Go somewhere</a>
+                    <a href="#" class="btn btn-primary peach-gradient disabled" disabled>Go somewhere</a>
                   </div>
                 </div>
               </div>
