--- a/index.html
+++ b/index.html
@@ -7,39 +7,39 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Looking Back At 2020:</title>
   <!-- MDB icon -->
-  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/img/mdb-favicon.ico" type="image/x-icon">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
-  <link rel="stylesheet" href="css/mdb.min.css">
+  <link rel="stylesheet" href="/css/mdb.min.css">
   <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="cloudy-knoxville-gradient">
 
-  <!-- Start your project here-->  
-  <header>
+  <!-- Start your project here--> 
 
-        <nav class="navbar fixed-top navbar-light navbar-expand-lg peach-gradient">
-            <a class="navbar-brand" href="#"><img src="/img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong> 2020</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/pages/covid.html">Coronavirus</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+  <header>
+    <nav class="navbar fixed-top navbar-light navbar-expand-lg peach-gradient">
+        <a class="navbar-brand" href="#"><img src="/img/lvilleLogo.png" width="30" height="30" class="d-inline-block align-top"><strong> 2020</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/covid.html">Coronavirus</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
   
       <div class="view intro-2">
           <div class="full-bg-img">
