Add body to covid.html, add base thing, some custom css for jumbos

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <base href="https://killocode.github.io">
+  <!--   <base href="https://killocode.github.io" -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -22,7 +21,7 @@
 </head>
 <body class="cloudy-knoxville-gradient">
 
-  <!-- Start your project here--> 
+  <!-- Start your project here-->
 
   <header>
     <nav class="navbar fixed-top navbar-light navbar-expand-lg peach-gradient">
@@ -41,7 +40,7 @@
             </ul>
         </div>
     </nav>
-  
+
       <div class="view intro-2">
           <div class="full-bg-img">
               <div class="mask rgba-black-light flex-center">
@@ -56,7 +55,7 @@
               </div>
           </div>
       </div>
-  
+
   </header>
 
 <main role="main">
@@ -100,11 +99,11 @@
               </div>
           </div>
 
-      
+
       <hr>
-  
+
     </div>
-  
+
 </main>
 
 <footer class="footer mt-auto py-3">
