2 new pages(empty) + navbar updates

--- a/index.html
+++ b/index.html
@@ -31,11 +31,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+                <!-- TODO: after all pages are done, sync navbar between all pages and change this active tag for whatever page it is-->
                 <li class="nav-item active">
                     <a class="nav-link" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pages/covid.html">Coronavirus</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/protests.html">Protests</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/otherissues.html">Other Issues</a>
                 </li>
             </ul>
         </div>
@@ -71,7 +78,7 @@
                   <h5 class="card-title">The COVID-19 Pandemic</h5>
                   <h6 class="card-subtitle text-muted mb-2">Late 2019 - Present</h6>
                   <p class="card-text">The Novel Coronavirus has swept across the globe affecting the entire human race, lives have been lost and the world shut down.</p>
-                  <a href="#" class="btn btn-primary peach-gradient">Go somewhere</a>
+                  <a href="/pages/covid.html" class="btn btn-primary peach-gradient">See More</a>
                 </div>
               </div>
             </div>
@@ -82,7 +89,7 @@
                   <h5 class="card-title">Protests Across the US</h5>
                   <h6 class="card-subtitle text-muted mb-2">26th of May - Present</h6>
                   <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                  <a href="#" class="btn btn-primary peach-gradient disabled" disabled>Go somewhere</a>
+                  <a href="/pages/protests.html" class="btn btn-primary peach-gradient">See More</a>
                 </div>
               </div>
             </div>
@@ -93,7 +100,7 @@
                     <h5 class="card-title">Other Issues this Year</h5>
                     <h6 class="card-subtitle text-muted mb-2">Date - Date</h6>
                     <p class="card-text">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                    <a href="#" class="btn btn-primary peach-gradient disabled" disabled>Go somewhere</a>
+                    <a href="/pages/otherissues.html" class="btn btn-primary peach-gradient" >See More</a>
                   </div>
                 </div>
               </div>
